add regiones and "sugerencia de busquedas", onDebunce

--- a/practica/paisesTestApp/src/app/pais/pages/por-pais/por-pais.component.html
+++ b/practica/paisesTestApp/src/app/pais/pages/por-pais/por-pais.component.html
@@ -8,7 +8,16 @@
     </app-pais-input>
   </div>
 </div>
+<ul *ngIf="paisesSugeridos.length>0" class="list-group">
+  <li
+    *ngFor="let pais of paisesSugeridos"
+    class="list-group-item list-group-item-action">
+    <a class="nav-link" [routerLink]="['/pais',pais.alpha2Code]">
+      {{pais.name}}
+    </a>
 
+  </li>
+</ul>
 <hr>
 
 <div *ngIf="hayError" class="alert alert-danger">
