--- a/practica/paisesTestApp/src/app/pais/pages/por-region/por-region.component.html
+++ b/practica/paisesTestApp/src/app/pais/pages/por-region/por-region.component.html
@@ -1,1 +1,29 @@
-<p>por-region works!</p>
+<h3>Busqueda por region <small> {{regionActiva | titlecase }} </small></h3>
+<hr>
+
+<h5>Seleccione la region</h5>
+
+<div class="row">
+  <div class="col">
+    <!--       [class.btn-primary]="region=== regionActiva" -->
+    <!-- [ngClass]="{
+        'btn-primary': regionActiva=== region,
+        'btn-outline-primary': regionActiva!== regionActiva
+      }"
+      -->
+    <!--       [class] = getClassCSS() PODRIA SER UN METODO -->
+    <button
+      class="btn "
+      *ngFor="let region of regiones"
+      [class] = "(region === regionActiva) ? 'btn btn-primary': 'btn btn-outline-primary'"
+      (click)="activarRegion(region)">
+      {{ region | titlecase }}
+    </button>
+  </div>
+</div>
+
+<div *ngIf="paises.length>0" class="row">
+  <div class="col">
+    <app-pais-tabla [paises]="paises"></app-pais-tabla>
+  </div>
+</div>
