--- a/practica/heroesApp/src/app/heroes/pages/home/home.component.html
+++ b/practica/heroesApp/src/app/heroes/pages/home/home.component.html
@@ -1,4 +1,7 @@
 <p>home HEROES works!</p>
 <a routerLink="agregar">agregar</a>
 <a routerLink="../auth/login">ir al login</a>
+<button (click)="logout()">
+Logout
+</button>
 <router-outlet></router-outlet>
